Updated the about and team page

--- a/website/src/main/resources/public/assets/css/styles.css
+++ b/website/src/main/resources/public/assets/css/styles.css
@@ -51,6 +51,10 @@ a,a:hover,a:active,a:visited, a:visited:hover {
   text-decoration: none;
 }
 
+a#link {
+	color:#A08A5C;
+	font-weight: bold;
+}
 
 /*  SECTION 2: Typography */
 
