--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -14,16 +14,35 @@
             <div class="col-sm-6 col-sm-offset-2">
 
                 <h3>{{message "lang.what-is-yorubaname"}}?</h3>
-                <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in
-                    a multimedia format. It is part of a long-term project to document all types of African cultural
+                <p class="lead">YorubaName.com is an online intervention to preserve and document all Yorùbá names in a
+                    multimedia format. It is part of a long-term project to document all types of African cultural
                     experiences on the internet as a way of ensuring the survival of African identities in their various
                     expressions.</p>
 
-                <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá names
-                    found a new iteration in January 2015 as a crowdsourced platform run by volunteer language
-                    enthusiasts from around the world. It is supported by funds from hundreds of individual donors who
-                    contributed to an Indiegogo fundraising campaign that ran from January to March 2015. This public
-                    app was launched in February 2016.</p>
+                <p>Initially presented as a university thesis in 2005, this multimedia dictionary of Yorùbá names found
+                    a new iteration in January 2015 as a crowdsourced platform run by volunteer language enthusiasts
+                    from around the world. It is supported by funds from hundreds of individual donors who contributed
+                    to an Indiegogo fundraising campaign that ran from January to March 2015. This website was launched
+                    in February 2016.</p>
+
+                <h4>{{message "lang.join-us-lex"}}</h4>
+                <p>If you are a competent speaker/writer/scholar of Yorùbá willing to join our list of volunteer
+                    lexicographers who have access to the dashboard to help edit and proofread the entries, and to make
+                    bulk addition of names, then we need you! Send us an email at project@yorubaname.com with
+                    “Lexicographer” in the subject title. Perks include having your name on the site, and having a
+                    chance to participate in all in-house activities and events.</p>
+
+                <h4>{{message "lang.lets-build-together"}}</h4>
+                <p>Dictionary entries are dynamic so as to allow both you, the users, and our in-house linguists to add
+                    information or correct any mistakes that may have slipped through the verification process. As a
+                    crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of
+                    the meaning of each name for our users and for future generations.</p>
+
+                <p>Ultimately, it's up to all of us to make the online dictionary of Yorùbá names an authoritative
+                    resource allowing anyone with an internet connection to explore this beautiful aspect of
+                    culture.</p>
+
+                <h3>FAQ</h3>
 
                 <h4>{{message "lang.how-names-collected"}}?</h4>
                 <p>All the names in this database were gathered from word of mouth, reference books, other published and
@@ -35,58 +54,56 @@
 
                 <h4>{{message "lang.how-to-use"}}?</h4>
                 <p>As it is now, you will be able to use the dictionary to find the meaning, spelling, tone-marking, and
-                    location of any Yorùbá name in the world. Just enter the name in the space provided on the
-                    homepage and hit “enter”. Sometimes the name will show up in the drop down suggestion list.
-                    Sometimes not. You won’t know if the name is or isn’t in the database until you hit "enter" so give
-                    it a try.</p>
+                    location of any Yorùbá name in the world. Just enter the name in the space provided on the homepage
+                    and hit “enter”. Sometimes the name will show up in the drop down suggestion list. Sometimes not.
+                    You won’t know if the name is or isn’t in the database until you hit "enter" so give it a try.</p>
 
                 <h4>{{message "lang.about-tone-mark"}}</h4>
                 <p>For search, do not worry if you don’t know the appropriate tone marks on the name you’re looking for.
                     Just type it, as long as you know how it is spelt, and hit “enter”. We have made sure that the
                     dictionary can return your search whether or not you have typed it correctly. If your spelling is
                     incorrect, the dictionary will also return the closest matches for you to choose from. What you can
-                    be
-                    sure of when you find what you're looking for is that the tone marks on the name entries will be
+                    be sure of when you find what you're looking for is that the tone marks on the name entries will be
                     correct. We have them all fully vetted by competent scholars and linguists.</p>
 
                 <p>For users of the dictionary interested in using tone-marking on their words and sentences in their
                     daily lives, and for our lexicographers who will need to properly tone-mark all the entries in the
                     dictionary, we released a free tone-marking software for Windows and Mac a while ago, which you can
-                    <a href="http://blog.yorubaname.com/?p=2385" target="_blank">download here</a> along with its
-                    <a href="http://blog.yorubaname.com/wp-content/uploads/2015/08/YorubaNameKeybordforWin-Manual.pdf"
-                       target="_blank">user guide</a>. Feel free to use it, and to recommend it to all your Yorùbá
+                    <a id="link" href="http://blog.yorubaname.com/?p=2385" target="_blank">download here</a> along with
+                    its
+                    <a id="link"
+                       href="http://blog.yorubaname.com/wp-content/uploads/2015/08/YorubaNameKeybordforWin-Manual.pdf"
+                       target="_blank">user guide</a>. Feel free to use it, and to recommend it to all your
+                    Yorùbá-speaking
                     friends far and wide. The survival of Yorùbá in writing (and on the internet) depends on accurate
-                    and proper use of tone marks on all your Yorùbá words, even those that appear inside English (or any
-                    other language) sentences.</p>
+                    and proper use of tone marks on all your Yorùbá words, even those that appear inside a sentence in
+                    English or any other language. See what we did here with the word ‘Yorùbá’?</p>
 
                 <h4>{{message "lang.work-in-progress"}}...</h4>
                 <p>Because we are just beginning, some of the names may not have all their fields complete. If you come
-                    across any of such names, and you have information that can help complete them, please use the
-                    “improve this entry” button under the name to suggest what is missing in the entry and we will add
-                    it at the earliest possible time.</p>
+                    across any such names, and you have information that can help complete them, please use the “improve
+                    this entry” button under the name to suggest what is missing in the entry and we will add it at the
+                    earliest possible time.</p>
 
                 <h4>{{message "lang.about-tts"}}...</h4>
-                <p>As promised in our master plan, the names in this dictionary eventually have audio prompts beside
-                    each name entry which the user can click on in order to hear the pronunciation of each entry. This
-                    functionality hasn’t been fully completed, so we have not launched it at this stage. But watch out
-                    for it at Phase II of the project launch.</p>
+                <p>As promised in our master plan, the names in this dictionary will eventually have audio prompts
+                    beside each name entry which the user can click on in order to hear the pronunciation of each entry.
+                    This functionality hasn’t been fully completed, so we have not launched it at this stage. But watch
+                    out for it at Phase II of the project launch.</p>
 
-                <h4>{{message "lang.join-us-lex"}}</h4>
-                <p>If you are a competent speaker/writer/scholar of Yorùbá willing to join our list of volunteer
-                    lexicographers who have access to the dashboard for easier opportunity to help edit and proofread
-                    the entries, and to make bulk addition of names, then we need you! Send us an email at
-                    project@yorubaname.com with “Lexicographer” in the subject title. Perks include having your name on
-                    the site, and having a chance to participate in all in-house activities and events.</p>
+                <h4>{{message "lang.how-to-support"}}</h4>
+                <p>Thank you for your offer. Many people, after reading about the project, have reached out to us asking
+                    how they could help YorubaName. You too can be part of our growing community of supporters!</p>
 
-                <h4>{{message "lang.lets-build-together"}}</h4>
-                <p>Dictionary entries are dynamic, so as to allow both you, the users, and our in-house linguists to add
-                    information or correct any mistakes that may have slipped through the verification process. As a
-                    crowdsourced project, our aim is to keep improving each entry in order to preserve the integrity of
-                    the meaning of each name for our users and for future generations.</p>
-
-                <p>Ultimately, it's up to all of us to make the online dictionary of Yorùbá names an authoritative
-                    resource allowing anyone with an internet connection to explore this beautiful aspect of
-                    culture.</p>
+                <p>Your contribution may be as a financial donation or through the volunteering of your skill either as
+                    a software/app developer, as a lexicographer, or as a public relations person. If you would like to
+                    volunteer, please go to <a id="link" href="http://www.yorubaname.com:8081/volunteer"
+                                               target="_blank">the
+                        volunteer page</a>. If you’d like to donate, you can do so via our
+                    <a id="link" href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story"
+                       target="_blank">Indiegogo page</a>, or, if you live in Nigeria and want to give in naira (or
+                    any other institutional support), please contact us at project@yorubaname.com. Needless to say,
+                    support like this is what keeps the project afloat.</p>
 
             </div>
 
