--- a/website/src/main/resources/website/team.hbs
+++ b/website/src/main/resources/website/team.hbs
@@ -6,43 +6,103 @@
 <!-- main-content -->
 
 <section>
-   <div class="container">
+    <div class="container">
 
-       <div class="row">
+        <div class="row">
 
-       <div class="col-sm-6 col-sm-offset-2">
+            <div class="col-sm-6 col-sm-offset-2">
 
-        <h3>{{message "lang.amazing-team"}}</h3>
+                <h3>{{message "lang.amazing-team"}}</h3>
 
-        <div class="well well-sm">
-			<h4>{{message "lang.join-the-team"}}</h4>
-			<p class="lead">We are always on the look out for more volunteers to join our team.</p>
-			<a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
-		</div>
+                <div class="well well-sm">
+                    <h4>{{message "lang.join-the-team"}}</h4>
+                    <p class="lead">We are always on the look out for more volunteers to join our team.</p>
+                    <a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
+                </div>
 
-		<p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He sees the world wide web as a universal platform and thus believes every culture/creed should be able to utilize it for self expression. He currently helps in coordinating Software Development efforts for the project, among other administrative roles.</p>
+                <p><strong>Adéyínká ÀJÀLÁ</strong> has always loved Yoruba Language, having a toddler and living in
+                    diaspora has further increased her passion for the language. On one of her quests for resources to
+                    teach her daughter the language, she came came across the Yoruba Names Dictionary campaign, she was
+                    so impressed by the initiative that she decided to volunteer to help with lexicography. She is
+                    devoting this season of her life to being a work from home mom to a delightful daughter while
+                    running her online weddings and events with personal shopper business. Her professional background
+                    is in IT - Application Support and Software Testing.</p>
+                <p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He
+                    sees the world wide web as a universal platform and thus believes every culture/creed should be able
+                    to utilize it for self expression. He currently helps in coordinating Software Development efforts
+                    for the project, among other administrative roles.</p>
+                <p><strong>Dave AGBOỌLÁ</strong> is a linguist, teacher and writer with experience in research, editing
+                    and administration. He has worked as a language teacher at various levels of education, most
+                    recently at the University of Lagos in the English Department. He currently works as the Executive
+                    Assistant to the Speaker at the Lagos House of Assembly, where his sole task is to prepare speeches
+                    for the Speaker. Dave came to know about the Yoruba Name project on Twitter a couple of months ago.
+                    He has been active in the lexicography team, coming up with tone marks for some Yorùbá names and
+                    researching name variations. He blogs about language at <a href="http://languageclinic.webnode.com"
+                                                                               target="_blank">languageclinic.webnode.com</a>.
+                </p>
+                <p><strong>Esther Aina Olatunde</strong> has a background in Computing and Systems Development
+                    and is one of the first batch of Nigerians on a scholarship sponsored by Interswitch at the
+                    Meltwater Entrepreneural School of Technology in Ghana. She's a full-stack developer with a couple of
+                    projects in Ruby on Rails, Java, Android, Python, MeteorJS, Wordpress and the MEAN Stack. Esther is
+                    excited to be part of the Yorùbá Name project and is particularly proud of telling the tales behind
+                    her middlename Aina. She helped design and set up the Yorùbá blog at blog.yorubaname.com</p>
+                <p>For <strong>Laila LE GUEN</strong>, the Yorùbá Name dictionary was a great opportunity to engage with
+                    two things she was already drawn to: Yorùbá? language learning and expanding linguistic diversity
+                    online. She joined the project in March 2015 and she soon came to be involved in the drafting of the
+                    newsletter, blog post editing, as well as some social media interactions. She also endeavoured to
+                    bring on board Yorùbá? speakers from the Republic of Benin so as to ensure inclusive participation
+                    across borders. She hopes that this dictionary will become a multilingual reference point for anyone
+                    seeking information about Yorùbá? personal names, but also serve as an inspiration for other
+                    language communities.</p>
+                <p><strong>Godswill Davis KOKO</strong> is a creative systems analyst and software engineer with working
+                    experience in applications and systems development methodologies, web applications, graphics,
+                    software development, deployment and documentation systems. Driven by challenging environments that
+                    make a positive impact, he always strives to meet his desire for success through life-long learning,
+                    which allows him to develop skills and experience while gaining professional excellence. As a
+                    graphic designer, he's responsible for the visual identity of the Yoruba Name project. Koko hopes to
+                    continue making a valuable contribution to this online dictionary thanks to his dedication to
+                    beautiful, compelling designs.</p>
 
-		<p><strong>Dave AGBOỌLÁ</strong> is a linguist, teacher and writer with experience in research, editing and administration. He has worked as a language teacher at various levels of education, most recently at the University of Lagos in the English Department. He currently works as the Executive Assistant to the Speaker at the Lagos House of Assembly, where his sole task is to prepare speeches for the Speaker. Dave came to know about the Yoruba Name project on Twitter a couple of months ago. He has been active in the lexicography team, coming up with tone marks for some Yorùbá names and researching name variations. He blogs about language at <a href="http://languageclinic.webnode.com" target="_blank">languageclinic.webnode.com</a>.</p>
+                <p><strong>Kẹ́hìndé LÌGÁLÍ</strong> was born in Abuja, Nigeria, but she has lived in the diaspora for
+                    over 15 years. She is a final year undergraduate student at Indiana University-Bloomington, studying
+                    Psychology and African Languages. After graduation, she plans to pursue a dual graduate program in
+                    Public affairs and African Studies. Her passion for global awareness, languages and cultures led her
+                    to join the Yorùbá Names Dictionary team in March of 2015. Currently, she collaborates with other
+                    team members to develop interactive content for our social media followers. Her personal goal is for
+                    the project to reach as many individuals as possible, particularly those outside Nigeria, in an
+                    effort to preserve Yorùbá language and culture.</p>
 
-		<p><strong>Adéyínká ÀJÀLÁ</strong> has always loved Yoruba Language, having a toddler and living in diaspora has further increased her passion for the language. On one of her quests for resources to teach her daughter the language, she came came across the Yoruba Names Dictionary campaign, she was so impressed by the initiative that she decided to volunteer to help with lexicography. She is devoting this season of her life to being a work from home mom to a delightful daughter while running her online weddings and events with personal shopper business. Her professional background is in IT - Application Support and Software Testing.</p>
+                <p><strong>Tọ́lá ODÙMÓSÙ</strong> is a software developer with experience working on projects in
+                    education technology, security and payments. He currently leads application development for desktop,
+                    mobile and web for TechyClass Ltd, a Canadian tech startup distributing educational content in
+                    Africa. He holds a B.Sc. in Electrical and Electronics Engineering, a post-graduate certificate in
+                    Computing and a Master's degree in Computer Science from Nottingham Trent University. In his free
+                    time, Tola likes to watch tech gadget reviews, read feature logs for language releases and learn new
+                    things by participating in the Yoruba Name project! More specifically, he's helped develop the
+                    dashboard admin console for content management and reporting using AngularJS/JavaScript.</p>
 
-		<p>For <strong>Laila LE GUEN</strong>, the Yorùbá Name dictionary was a great opportunity to engage with two things she was already drawn to: Yorùbá? language learning and expanding linguistic diversity online. She joined the project in March 2015 and she soon came to be involved in the drafting of the newsletter, blog post editing, as well as some social media interactions. She also endeavoured to bring on board Yorùbá? speakers from the Republic of Benin so as to ensure inclusive participation across borders. She hopes that this dictionary will become a multilingual reference point for anyone seeking information about Yorùbá? personal names, but also serve as an inspiration for other language communities.</p>
+                <p><strong>Kọ́lá TÚBỌ̀SÚN</strong> is a linguist, teacher, and writer. He holds an M.A. in
+                    Linguistics/TESL from Southern Illinois University-Edwardsville (2012) and a B.A. in Linguistics
+                    from the University of Ibadan (2005). He has previously worked as a Fulbright foreign language
+                    teacher and as an English to Yorùbá and Yorùbá to English translator. He headed the 2012 campaign to
+                    make Twitter available in Yorùbá and has been involved in other activities aimed at improving
+                    African language use on the internet. In January 2015, Kọ́lá founded YorubaName.com, a portal to
+                    document all the names in Yorùbá language. He is currently involved in lexicography on the project,
+                    among other advisory roles.</p>
 
-		<p><strong>Godswill Davis KOKO</strong> is a creative systems analyst and software engineer with working experience in applications and systems development methodologies, web applications, graphics, software development, deployment and documentation systems. Driven by challenging environments that make a positive impact, he always strives to meet his desire for success through life-long learning, which allows him to develop skills and experience while gaining professional excellence. As a graphic designer, he's responsible for the visual identity of the Yoruba Name project. Koko hopes to continue making a valuable contribution to this online dictionary thanks to his dedication to beautiful, compelling designs.</p>
+                <p><strong>Victor WILLIAMSON</strong> is currently a Ph.D. student in Computer Science at the University
+                    of Wisconsin-Milwaukee. His research interests are centered around the integration of black culture
+                    into computer science via multimedia on the Web. As a 2010 GEM fellow, he graduated from MIT with a
+                    Master’s degree in Computer Science with a focus on network security and web interfaces. He traveled
+                    to Ibadan, Nigeria, in the summer of 2014 to study the Yoruba language and is interested in
+                    multi-disciplinary approaches to promote and preserve African and African American heritage. Victor
+                    works in lexicography.</p>
 
-		<p><strong>Kẹ́hìndé LÌGÁLÍ</strong> was born in Abuja, Nigeria, but she has lived in the diaspora for over 15 years. She is a final year undergraduate student at Indiana University-Bloomington, studying Psychology and African Languages. After graduation, she plans to pursue a dual graduate program in Public affairs and African Studies. Her passion for global awareness, languages and cultures led her to join the Yorùbá Names Dictionary team in March of 2015. Currently, she collaborates with other team members to develop interactive content for our social media followers. Her personal goal is for the project to reach as many individuals as possible, particularly those outside Nigeria, in an effort to preserve Yorùbá language and culture.</p>
+            </div>
 
-		<p><strong>Tọ́lá ODÙMÓSÙ</strong> is a software developer with experience working on projects in education technology, security and payments. He currently leads application development for desktop, mobile and web for TechyClass Ltd, a Canadian tech startup distributing educational content in Africa. He holds a B.Sc. in Electrical and Electronics Engineering, a post-graduate certificate in Computing and a Master's degree in Computer Science from Nottingham Trent University. In his free time, Tola likes to watch tech gadget reviews, read feature logs for language releases and learn new things by participating in the Yoruba Name project! More specifically, he's helped develop the dashboard admin console for content management and reporting using AngularJS/JavaScript.</p>
-
-		<p><strong>Kọ́lá TÚBỌ̀SÚN</strong> is a linguist, teacher, and writer. He holds an M.A. in Linguistics/TESL from Southern Illinois University-Edwardsville (2012) and a B.A. in Linguistics from the University of Ibadan (2005). He has previously worked as a Fulbright foreign language teacher and as an English to Yorùbá and Yorùbá to English translator. He headed the 2012 campaign to make Twitter available in Yorùbá and has been involved in other activities aimed at improving African language use on the internet. In January 2015, Kọ́lá founded YorubaName.com, a portal to document all the names in Yorùbá language. He is currently involved in lexicography on the project, among other advisory roles.</p>
-
-		<p><strong>Victor WILLIAMSON</strong> is currently a Ph.D. student in Computer Science at the University of Wisconsin-Milwaukee. His research interests are centered around the integration of black culture into computer science via multimedia on the Web. As a 2010 GEM fellow, he graduated from MIT with a Master’s degree in Computer Science with a focus on network security and web interfaces. He traveled to Ibadan, Nigeria, in the summer of 2014 to study the Yoruba language and is interested in multi-disciplinary approaches to promote and preserve African and African American heritage. Victor works in lexicography.</p>
-
-       </div>
-
+        </div>
     </div>
-   </div>
-   
+
 </section>
 
 <!-- /main-content -->
