--- a/website/src/main/resources/website/scriptIncludes.hbs
+++ b/website/src/main/resources/website/scriptIncludes.hbs
@@ -10,11 +10,11 @@
 <!-- Fallback to local if cdn does not work
 <script src="/assets/js/typeahead.js"></script> -->
 
-<div id="fb-root"></div>
+<!--div id="fb-root"></div>
 <script>(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=871794512903076";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));</script-->
