Reordered names on team page

--- a/website/src/main/resources/website/team.hbs
+++ b/website/src/main/resources/website/team.hbs
@@ -20,6 +20,10 @@
                     <a class="btn btn-lg btn-success" href="/volunteer">Volunteer</a>
                 </div>
 
+                <p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He
+                    sees the world wide web as a universal platform and thus believes every culture/creed should be able
+                    to utilize it for self expression. He currently helps in coordinating Software Development efforts
+                    for the project, among other administrative roles.</p>
                 <p><strong>Adéyínká ÀJÀLÁ</strong> has always loved Yoruba Language, having a toddler and living in
                     diaspora has further increased her passion for the language. On one of her quests for resources to
                     teach her daughter the language, she came came across the Yoruba Names Dictionary campaign, she was
@@ -27,10 +31,6 @@
                     devoting this season of her life to being a work from home mom to a delightful daughter while
                     running her online weddings and events with personal shopper business. Her professional background
                     is in IT - Application Support and Software Testing.</p>
-                <p><strong>Dadepo ADÉRẸ̀MÍ</strong> was one of the first volunteers to join the team in early 2015. He
-                    sees the world wide web as a universal platform and thus believes every culture/creed should be able
-                    to utilize it for self expression. He currently helps in coordinating Software Development efforts
-                    for the project, among other administrative roles.</p>
                 <p><strong>Dave AGBOỌLÁ</strong> is a linguist, teacher and writer with experience in research, editing
                     and administration. He has worked as a language teacher at various levels of education, most
                     recently at the University of Lagos in the English Department. He currently works as the Executive
@@ -40,12 +40,6 @@
                     researching name variations. He blogs about language at <a href="http://languageclinic.webnode.com"
                                                                                target="_blank">languageclinic.webnode.com</a>.
                 </p>
-                <p><strong>Esther Aina Olatunde</strong> has a background in Computing and Systems Development
-                    and is one of the first batch of Nigerians on a scholarship sponsored by Interswitch at the
-                    Meltwater Entrepreneural School of Technology in Ghana. She's a full-stack developer with a couple of
-                    projects in Ruby on Rails, Java, Android, Python, MeteorJS, Wordpress and the MEAN Stack. Esther is
-                    excited to be part of the Yorùbá Name project and is particularly proud of telling the tales behind
-                    her middlename Aina. She helped design and set up the Yorùbá blog at blog.yorubaname.com</p>
                 <p>For <strong>Laila LE GUEN</strong>, the Yorùbá Name dictionary was a great opportunity to engage with
                     two things she was already drawn to: Yorùbá? language learning and expanding linguistic diversity
                     online. She joined the project in March 2015 and she soon came to be involved in the drafting of the
@@ -62,7 +56,6 @@
                     graphic designer, he's responsible for the visual identity of the Yoruba Name project. Koko hopes to
                     continue making a valuable contribution to this online dictionary thanks to his dedication to
                     beautiful, compelling designs.</p>
-
                 <p><strong>Kẹ́hìndé LÌGÁLÍ</strong> was born in Abuja, Nigeria, but she has lived in the diaspora for
                     over 15 years. She is a final year undergraduate student at Indiana University-Bloomington, studying
                     Psychology and African Languages. After graduation, she plans to pursue a dual graduate program in
@@ -71,7 +64,6 @@
                     team members to develop interactive content for our social media followers. Her personal goal is for
                     the project to reach as many individuals as possible, particularly those outside Nigeria, in an
                     effort to preserve Yorùbá language and culture.</p>
-
                 <p><strong>Tọ́lá ODÙMÓSÙ</strong> is a software developer with experience working on projects in
                     education technology, security and payments. He currently leads application development for desktop,
                     mobile and web for TechyClass Ltd, a Canadian tech startup distributing educational content in
@@ -80,7 +72,13 @@
                     time, Tola likes to watch tech gadget reviews, read feature logs for language releases and learn new
                     things by participating in the Yoruba Name project! More specifically, he's helped develop the
                     dashboard admin console for content management and reporting using AngularJS/JavaScript.</p>
-
+                <p><strong>Esther Aina OLATUNDE</strong> has a background in Computing and Systems Development
+                    and is one of the first batch of Nigerians on a scholarship sponsored by Interswitch at the
+                    Meltwater Entrepreneural School of Technology in Ghana. She's a full-stack developer with a couple
+                    of
+                    projects in Ruby on Rails, Java, Android, Python, MeteorJS, Wordpress and the MEAN Stack. Esther is
+                    excited to be part of the Yorùbá Name project and is particularly proud of telling the tales behind
+                    her middlename Aina. She helped design and set up the Yorùbá blog at blog.yorubaname.com</p>
                 <p><strong>Kọ́lá TÚBỌ̀SÚN</strong> is a linguist, teacher, and writer. He holds an M.A. in
                     Linguistics/TESL from Southern Illinois University-Edwardsville (2012) and a B.A. in Linguistics
                     from the University of Ibadan (2005). He has previously worked as a Fulbright foreign language
@@ -89,7 +87,6 @@
                     African language use on the internet. In January 2015, Kọ́lá founded YorubaName.com, a portal to
                     document all the names in Yorùbá language. He is currently involved in lexicography on the project,
                     among other advisory roles.</p>
-
                 <p><strong>Victor WILLIAMSON</strong> is currently a Ph.D. student in Computer Science at the University
                     of Wisconsin-Milwaukee. His research interests are centered around the integration of black culture
                     into computer science via multimedia on the Web. As a 2010 GEM fellow, he graduated from MIT with a
@@ -97,7 +94,6 @@
                     to Ibadan, Nigeria, in the summer of 2014 to study the Yoruba language and is interested in
                     multi-disciplinary approaches to promote and preserve African and African American heritage. Victor
                     works in lexicography.</p>
-
             </div>
 
         </div>
