Removed hard coding of port

--- a/website/src/main/resources/website/aboutus.hbs
+++ b/website/src/main/resources/website/aboutus.hbs
@@ -97,7 +97,7 @@
 
                 <p>Your contribution may be as a financial donation or through the volunteering of your skill either as
                     a software/app developer, as a lexicographer, or as a public relations person. If you would like to
-                    volunteer, please go to <a id="link" href="http://www.yorubaname.com:8081/volunteer"
+                    volunteer, please go to <a id="link" href="http://www.yorubaname.com/volunteer"
                                                target="_blank">the
                         volunteer page</a>. If you’d like to donate, you can do so via our
                     <a id="link" href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story"
