--- a/website/src/main/resources/website/footer.hbs
+++ b/website/src/main/resources/website/footer.hbs
@@ -10,7 +10,7 @@
             </nav>
 	  	</div>
 	  	<div class="col-sm-4 text-right">
-	    <a href="/">{{message "lang.home"}}</a><a href="/about-us">{{message "lang.about"}}</a><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a><a href="/volunteer">{{message "lang.volunteer"}}</a><a href="blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a><a href="/contact-us">{{message "lang.contact"}}</a></div>
+	    <a href="/">{{message "lang.home"}}</a><a href="/about-us">{{message "lang.about"}}</a><a href="https://www.indiegogo.com/projects/the-yoruba-names-dictionary#/story" target="_blank">{{message "lang.donate"}}</a><a href="/volunteer">{{message "lang.volunteer"}}</a><a href="http://blog.yorubaname.com" target="_blank">{{message "lang.blog"}}</a><a href="/contact-us">{{message "lang.contact"}}</a></div>
 	    <div style="visibility: hidden"><div id="host">{{ host }}</div></div>
 	  </div>
 	</div>
