--- a/website/src/main/resources/website/scriptIncludes.hbs
+++ b/website/src/main/resources/website/scriptIncludes.hbs
@@ -1,14 +1,14 @@
 <script src="/assets/js/jquery-2.1.3.min.js" defer></script>
 <script src="/assets/js/bootstrap.min.js" defer></script>
-<script src="/assets/js/scripts.js" defer></script>
-<script src="/assets/js/jquery.keyboard.js" defer></script>
 <script src="/assets/js/jquery-ui.min.js" defer></script>
 <script src="/assets/js/jquery.mousewheel.js" defer></script>
 <script src="/assets/js/multiple-select.js" defer></script>
+<script src="/assets/js/jquery.keyboard.js" defer></script>
 <script src="/assets/js/jquery.keyboard.extension-altkeyspopup.js" defer></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js" defer></script>
 <!-- Fallback to local if cdn does not work
 <script src="/assets/js/typeahead.js"></script> -->
+<script src="/assets/js/scripts.js" defer></script>
 
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -17,4 +17,5 @@
   js = d.createElement(s); js.id = id;
   js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.5&appId=589413414564954";
   fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+}(document, 'script', 'facebook-jssdk'));
+</script>
