--- a/website/src/main/resources/website/scriptIncludes.hbs
+++ b/website/src/main/resources/website/scriptIncludes.hbs
@@ -3,8 +3,8 @@
 <script src="/assets/js/jquery-ui.min.js" defer></script>
 <script src="/assets/js/jquery.mousewheel.js" defer></script>
 <script src="/assets/js/multiple-select.js" defer></script>
-<script src="/assets/js/jquery.keyboard.js" defer></script>
-<script src="/assets/js/jquery.keyboard.extension-altkeyspopup.js" defer></script>
+<!--script src="/assets/js/jquery.keyboard.js" defer></script>
+<script src="/assets/js/jquery.keyboard.extension-altkeyspopup.js" defer></script-->
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/typeahead.js/0.11.1/typeahead.bundle.min.js" defer></script>
 <!-- Fallback to local if cdn does not work
 <script src="/assets/js/typeahead.js"></script> -->
