--- a/website/src/main/resources/website/searchcomponent.hbs
+++ b/website/src/main/resources/website/searchcomponent.hbs
@@ -1,7 +1,7 @@
 <form class="form-horizontal" role="form">
 	<div class="search-input" id="search-tph">             			
 	    <input type="text" class="form-control th this-query" id="keyboard" name="searchname" placeholder="{{message "lang.search-plchol"}}" autocomplete="off" spellcheck="false">
-	    <i class="fa fa-keyboard-o hidden-xs" id="keyboardp" data-toggle="tooltip" data-placement="top" title="{{message "lang.kybtitle"}}"></i>
+	    <!--i class="fa fa-keyboard-o hidden-xs" id="keyboardp" data-toggle="tooltip" data-placement="top" title="{{message "lang.kybtitle"}}"></i-->
 	    <!-- <p class="jtext"><a href="#"><i class="fa fa-search-plus"> {{message "lang.adv-search"}} </i></a></p> -->
 	    <button class="btn btn-search btn-success" type="submit"><i class="fa fa-search"></i></button>
 	</div><br /><!-- /input-group -->                
